# GALibrary

./: .gitignore  CMakeLists.txt  README.md  USAGE.md
Code/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  GALib.cpp  GALib.h  GAWorld.cpp  Gene.cpp  Population.cpp  UqPtr.h  main.cpp  main.h
Code/Operation/: OperationBase.h
Code/galib/includes/: Chromosome.h  GAManager.h  GAWorld.h  OperationBase.h
Code/galib/src/: GAManager.cpp  GAWorld.cpp
GALib/: CMakeLists.txt
GALib/Code/: Chromosome.h  GAWorld.h  Population.h
GALib/Code/Operation/: OperationBase.h
